--- a/scss/_colorCode.scss
+++ b/scss/_colorCode.scss
@@ -12,32 +12,31 @@ $black011: #5d5d5d;
 $black012: #505050;
 
 $green001: #44be1d;
-$green004: #39792d;
-$green006: #57ed22;
-$green007: #2b4517;
-$green008: #097c25;
-$green009: #43b71b;
-$green010: #3e6f14;
-$green011: #4be119;
-$green012: #43dc16;
-$green013: #3e8a13;
-$green014: #3aad1b;
-$green015: #2cbd0d;
-$green016: #aef156;
-$green017: #37bb18;
-$green018: #49dd16;
-$green019: #29650f;
-$green021: #95f221;
-$green022: #16e329;
+$green002: #39792d;
+$green003: #097c25;
+$green004: #43b71b;
+$green005: #3e6f14;
+$green006: #4be119;
+$green007: #43dc16;
+$green008: #3e8a13;
+$green009: #3aad1b;
+$green010: #2cbd0d;
+$green011: #aef156;
+$green012: #37bb18;
+$green013: #49dd16;
+$green014: #29650f;
+$green015: #95f221;
+$green016: #16e329;
+$green017: #6ad237;
 
 $white001: #ffffff;
 $white002: #ababab;
-$white004: #e0e0e0;
-$white005: #b2b2b2;
-$white006: #cacaca;
-$white007: #c3c3c3;
-$white010: #d9d9d9;
-$white011: #ececec;
+$white003: #e0e0e0;
+$white004: #b2b2b2;
+$white005: #cacaca;
+$white006: #c3c3c3;
+$white007: #d9d9d9;
+$white008: #ececec;
 
 $gray001: #999999;
 $gray002: #626262;
