--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ html {
         }
     
         &::-webkit-scrollbar-thumb {
-            background: #626262;
+            background: $gray002;
             border-radius: 10px;
         }
     }
