--- a/css/style.css
+++ b/css/style.css
@@ -5057,18 +5057,18 @@ main .bg {
   top: 5px;
 }
 .chleague button {
+  background: #393939;
+  border: solid 1px #37da14;
+  color: #37da14;
   width: 160px;
   height: 36px;
-  border: 1px solid #37da14;
   border-radius: 5px;
   font-size: 16px;
   font-weight: bold;
-  background: #393939;
-  color: #37da14;
   margin-top: 15px;
 }
 .chleague button:hover, .chleague button:active, .chleague button.active {
-  background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
+  background: linear-gradient(to right, #92e820 0%, #46dd16 90%);
   border-color: #aef156;
   color: #222222;
 }
@@ -5425,13 +5425,13 @@ main .bg {
   font-size: 16px;
   margin-right: 4px;
 }
+.controlBox .innerBox1 .longBox input:nth-of-type(1) {
+  margin-left: 20px;
+}
 .controlBox .innerBox1 .longBox input:hover, .controlBox .innerBox1 .longBox input:active, .controlBox .innerBox1 .longBox input.active {
   background: linear-gradient(to right, #92e820 0%, #46dd16 90%);
   border-color: #aef156;
   color: #131313;
-}
-.controlBox .innerBox1 .longBox input:nth-of-type(1) {
-  margin-left: 20px;
 }
 .controlBox .innerBox2 {
   width: calc(96% - 15px);
@@ -6908,8 +6908,8 @@ main .bg {
 .fixside .search {
   width: 300px;
   height: 60px;
-  background: linear-gradient(to top, #272727 0%, #434343);
-  border: solid 1px #327e1a;
+  background: linear-gradient(to top, #1f1f1f 0%, #3c3c3c 100%);
+  border: solid 1px #097c25;
   border-radius: 3px 0px 0px 3px;
   position: absolute;
   top: 0px;
@@ -6919,7 +6919,7 @@ main .bg {
 }
 .fixside .search.open {
   left: -240px;
-  background: #414141;
+  background: #393939;
 }
 .fixside .search .searchbut {
   width: 60px;
@@ -6940,7 +6940,7 @@ main .bg {
 }
 .fixside .search .searchbut span {
   font-size: 13px;
-  color: #c8c8c8;
+  color: #cacaca;
 }
 .fixside .search .searchbut .fixsideimg {
   width: 30px;
@@ -6952,38 +6952,41 @@ main .bg {
   pointer-events: none;
 }
 .fixside .search input {
+  background: linear-gradient(to bottom, #303030 21%, #424242 100%);
+  border: solid 1px #5d5d5d;
+  box-shadow: 0px 3px 10px 2px #1f1f1f inset;
+  color: #898787;
   width: 140px;
   height: 30px;
   font-size: 16px;
   padding-left: 10px;
-  box-shadow: 0px 3px 10px 2px #1f1f1f inset;
-  border: solid 1px #5d5d5d;
   border-top: none;
   border-radius: 3px;
   float: left;
   margin: 15px 0px 0px 10px;
-  background: linear-gradient(to bottom, #303030 21%, #424242 100%);
-  color: #898787;
+}
+.fixside .search input::placeholder {
+  color: #999999;
 }
 .fixside .search input::placeholder {
   font-weight: bold;
-  color: #898787;
   font-size: 14px;
 }
 .fixside .search button {
+  background: #393939;
+  border: solid 1px #37da14;
+  color: #37da14;
   width: 50px;
   height: 28px;
-  background: #2b2b2b;
-  border: solid 1px #34aa0d;
-  color: #42c317;
   float: left;
   border-radius: 5px;
   font-size: 16px;
   margin: 16px 0px 16px 15px;
 }
 .fixside .search button:hover, .fixside .search button:active, .fixside .search button.active {
-  color: #2b2b2b;
-  background: #34aa0d;
+  background: linear-gradient(to right, #92e820 0%, #46dd16 90%);
+  border-color: #aef156;
+  color: #222222;
 }
 .fixside .search .searchbox {
   width: 240px;
@@ -7000,10 +7003,13 @@ main .bg {
   padding-left: 20px;
   position: relative;
   font-size: 14px;
-  background: linear-gradient(to top, #393939 0%, #555555 100%);
+  background: linear-gradient(to top, #323232 0%, #434343 100%);
   cursor: pointer;
-  color: #dadada;
-  border-bottom: solid 1px #6c6c6c;
+  color: #e0e0e0;
+  border-bottom: solid 1px #626262;
+}
+.fixside .search .searchbox li:nth-of-type(1) {
+  border-top: solid 1px #626262;
 }
 .fixside .search .searchbox li::before {
   content: "";
@@ -7019,14 +7025,13 @@ main .bg {
   transition: 0.3s all;
 }
 .fixside .search .searchbox li:hover, .fixside .search .searchbox li:active, .fixside .search .searchbox li.active {
-  background: linear-gradient(to bottom, #303030 0%, #393939 100%);
-  color: #dadada;
+  background: linear-gradient(to bottom, #1d1d1d 16%, #303030 100%);
 }
 .fixside .search .searchbox li:hover::before, .fixside .search .searchbox li:active::before, .fixside .search .searchbox li.active::before {
   transform: rotate(0deg);
 }
 .fixside .search .searchbox div {
-  background: #2b2b2b;
+  background: #404040;
   width: 100%;
   height: 0px;
   overflow: hidden;
@@ -7039,13 +7044,13 @@ main .bg {
   width: 100%;
   height: 50px;
   line-height: 50px;
-  color: #b9b9b9;
+  color: #c3c3c3;
   border-bottom: solid 1px #8c8c8c;
   font-size: 14px;
 }
 .fixside .search .searchbox div a:hover, .fixside .search .searchbox div a:active, .fixside .search .searchbox div a.active {
   background: #1f1f1f;
-  color: #53ca2a;
+  color: #44be1d;
 }
 .fixside .search .searchbox div a .team {
   display: block;
@@ -7073,47 +7078,15 @@ main .bg {
   position: relative;
   transition: all 0.3s;
 }
-.fixside .fun .hamBtn {
-  display: none;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 0px;
-  left: -30px;
-  border-radius: 3px 0px 0px 3px;
-  background: #eaedf4;
-  padding: 0px;
-  cursor: pointer;
-}
-.fixside .fun .hamBtn:hover, .fixside .fun .hamBtn:active, .fixside .fun .hamBtn.active {
-  background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
-}
-.fixside .fun .hamBtn:hover span, .fixside .fun .hamBtn:active span, .fixside .fun .hamBtn.active span {
-  background: #ffffff;
-}
-.fixside .fun .hamBtn span {
-  display: block;
-  width: 55%;
-  height: 4px;
-  background: #f3b378;
-  margin: 0px 0px 0px 7px;
-  border-radius: 5px;
-}
-.fixside .fun .hamBtn span:first-child {
-  margin: 6px 0px 3px 7px;
-}
-.fixside .fun .hamBtn span:last-child {
-  margin-top: 3px;
-}
 .fixside .fun a {
   display: block;
   width: 100%;
   height: 62px;
-  background: linear-gradient(to top, #272727 0%, #434343 100%);
+  background: linear-gradient(to top, #1f1f1f 0%, #3c3c3c 100%);
   border-radius: 3px 0px 0px 3px;
   text-align: center;
   margin-top: 3px;
-  border: solid 1px #327e1a;
+  border: solid 1px #097c25;
   cursor: pointer;
 }
 .fixside .fun a:hover, .fixside .fun a:active, .fixside .fun a.active {
@@ -7127,7 +7100,7 @@ main .bg {
 }
 .fixside .fun a span {
   font-size: 13px;
-  color: #d0d0d0;
+  color: #cacaca;
 }
 .fixside .fun a .fixsideimg {
   width: 30px;
